@startuml

hide circle
skinparam classAttributeIconSize 0

    class DeleteTutorialCommand {
        +execute(parts: String, tutorialClassList: TutorialClassList): void
    }

    class ListExistingTutorialsCommand {
            +execute(parts: String, tutorialClassList: TutorialClassList): void
        }

    class NewTutorialCommand {
            +execute(parts: String, tutorialClassList: TutorialClassList): void
        }

    interface "<<interface>> \n Command<T>" {
        +execute(input: String, context: T): void
    }


    class TutorialClass {
        -tutorialName: String
        -studentList: StudentList
        -startTime: LocalTime
        -endTime: LocalTime
        -dayOfWeek: dayOfWeek
        +TutorialClass(tutorialName:String, dayOfWeek: DayOfWeek,
startTime: LocalTime, endTime: LocalTime)
        +getStartTime(): LocalTime
        +getTutorialName(): String
        +getDayOfWeek(): DayOfWeek
        +getStartTime: LocalTime
        +getEndTime: LocalTime
    }

    class TutorialClassList {
        - tutorialClasses : ArrayList<TutorialClass>
        +getTutorialByName(name: String): TutorialClass
        +removeTutorialClass(tutorialClass: TutorialClass)
        +getTutorialClasses(): ArrayList<TutorialClass>
        +addTutorialClass(tutorialClass: TutorialClass)
    }




' Relationships
"<<interface>> \n Command<T>" <|.. DeleteTutorialCommand : <<implements>>
DeleteTutorialCommand --> TutorialClassList
TutorialClassList "1 "*-- "*" TutorialClass: contains

"<<interface>> \n Command<T>" <|.. ListExistingTutorialsCommand : <<implements>>
ListExistingTutorialsCommand --> TutorialClassList

"<<interface>> \n Command<T>" <|.. NewTutorialCommand : <<implements>>
NewTutorialCommand --> TutorialClassList

@enduml